<resources>
    <string name="app_name">GuessNum</string>
    <string name="please_enter_a_number">Please enter a number(1~10)</string>
    <string name="ok">OK</string>
    <string name="yes_you_got_it">Yes,you got it</string>
    <string name="bigger">Bigger</string>
    <string name="smaller">smaller</string>
    <string name="dialog_title">Message</string>
    <string name="title_activity_material">MaterialActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="excellent_got_it">"Excellent! The number is "</string>
</resources>